--- a/examples/create-ic-app-react-demo/package.json
+++ b/examples/create-ic-app-react-demo/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "postinstall": "patch-package"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@dfinity/agent": "link:../../node_modules/@dfinity/agent",
