--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,3 +68,63 @@ jobs:
         env:
           VITE_NFID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
           VITE_NFID_PROVIDER_IFRAME_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_IFRAME_URL}}
+
+
+name: Staging
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: aviate-labs/setup-dfx@v0.2.3
+        with:
+          dfx-version: 0.9.2
+        env:
+          DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
+
+      - name: STAGING | MULTIPASS FRONTEND | install & deploy
+        run: |
+          yarn
+
+          pushd src/ui-kit
+          yarn && yarn build
+          popd
+
+
+          # install local to generate the types
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
+
+          # Build on ic
+          dfx identity use action
+          dfx deploy --network ic  --no-wallet
+
+        env:
+          REACT_APP_FRONTEND_MODE: production
+          REACT_APP_BACKEND_MODE: STAGING
+          REACT_APP_II_MODE: production
+          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
+          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
+          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
+          REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
+          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.VITE_AWS_VERIFY_PHONENUMBER}}
+          REACT_APP_USERGEEK_API_KEY: ${{secrets.VITE_USERGEEK_API_KEY}}
+
+      - name: STAGING | CREATE-IC-APP-REACT Demo | install & deploy
+        run: |
+          cd examples/create-ic-app-react-demo && yarn
+
+          # install local to generate the types
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
+
+          # Build on ic
+          dfx identity use action
+          dfx deploy --network ic  --no-wallet
+
+        env:
+          VITE_NFID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
+          VITE_NFID_PROVIDER_IFRAME_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_IFRAME_URL}}
