--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,14 +41,14 @@ jobs:
 
         env:
           REACT_APP_FRONTEND_MODE: production
-          REACT_APP_BACKEND_MODE: STAGING
+          REACT_APP_BACKEND_MODE: PRODUCTION
           REACT_APP_II_MODE: production
-          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
-          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
-          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
-          REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
-          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.VITE_AWS_VERIFY_PHONENUMBER}}
-          REACT_APP_USERGEEK_API_KEY: ${{secrets.VITE_USERGEEK_API_KEY}}
+          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app
+          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IDENTITY_MANAGER}}
+          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
+          REACT_APP_II_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
+          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
+          REACT_APP_USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
       - name: CREATE-IC-APP-REACT Demo | install & deploy
         run: |
@@ -66,65 +66,5 @@ jobs:
           fi
 
         env:
-          VITE_NFID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
-          VITE_NFID_PROVIDER_IFRAME_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_IFRAME_URL}}
-
-
-name: Staging
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: aviate-labs/setup-dfx@v0.2.3
-        with:
-          dfx-version: 0.9.2
-        env:
-          DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
-
-      - name: STAGING | MULTIPASS FRONTEND | install & deploy
-        run: |
-          yarn
-
-          pushd src/ui-kit
-          yarn && yarn build
-          popd
-
-
-          # install local to generate the types
-          dfx start --clean --background
-          dfx deploy --no-wallet
-          dfx stop
-
-          # Build on ic
-          dfx identity use action
-          dfx deploy --network ic  --no-wallet
-
-        env:
-          REACT_APP_FRONTEND_MODE: production
-          REACT_APP_BACKEND_MODE: STAGING
-          REACT_APP_II_MODE: production
-          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
-          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
-          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
-          REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
-          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.VITE_AWS_VERIFY_PHONENUMBER}}
-          REACT_APP_USERGEEK_API_KEY: ${{secrets.VITE_USERGEEK_API_KEY}}
-
-      - name: STAGING | CREATE-IC-APP-REACT Demo | install & deploy
-        run: |
-          cd examples/create-ic-app-react-demo && yarn
-
-          # install local to generate the types
-          dfx start --clean --background
-          dfx deploy --no-wallet
-          dfx stop
-
-          # Build on ic
-          dfx identity use action
-          dfx deploy --network ic  --no-wallet
-
-        env:
-          VITE_NFID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
-          VITE_NFID_PROVIDER_IFRAME_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_IFRAME_URL}}
+          VITE_NFID_PROVIDER_URL: https://${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app/authenticate/?applicationName=NFID-Demo
+          VITE_NFID_PROVIDER_IFRAME_URL: https://${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app/iframe-authenticate/?applicationName=NFID-Demo
