--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -39,6 +39,10 @@ jobs:
         run: |
           cd examples/create-ic-app-react-demo && yarn
 
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
+
           dfx identity use action
           dfx deploy --network dev  --no-wallet
 
