--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
           REACT_APP_FRONTEND_MODE: production
           REACT_APP_BACKEND_MODE: PRODUCTION
           REACT_APP_II_MODE: production
+          DFX_NETWORK: ic
           REACT_APP_MULTIPASS_DOMAIN: ${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app
           REACT_APP_IDENTITY_MANAGER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IDENTITY_MANAGER}}
           REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
@@ -66,5 +67,6 @@ jobs:
           fi
 
         env:
+          DFX_NETWORK: ic
           VITE_NFID_PROVIDER_URL: https://${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app/authenticate/?applicationName=NFID-Demo
           VITE_NFID_PROVIDER_IFRAME_URL: https://${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app/iframe-authenticate/?applicationName=NFID-Demo
