--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test:dev": "craco test",
+    "test": "jest --passWithNoTests",
     "eject": "craco eject",
     "generate:types": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t ts > frontend/generated/identity_manager.d.ts",
     "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
@@ -29,9 +30,6 @@
     "immer": "9.0.12",
     "jotai": "1.6.1",
     "process": "0.11.10",
-    "qrcode": "1.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.28.1",
     "react-icons": "^4.3.1",
@@ -47,9 +45,9 @@
   },
   "devDependencies": {
     "@craco/craco": "6.4.3",
+    "@identity-labs/nfid-ui-kit-core": "0.0.1",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.23",
-    "@types/qrcode": "1.4.2",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
     "@types/react-helmet": "6.1.5",
