--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@identity-labs/multipass-frontend",
+  "name": "@internet-identity-labs/multipass-frontend",
   "version": "0.0.0",
   "scripts": {
     "dev": "craco start",
     "build": "craco build",
+    "build:example": "export EXAMPLE_BUILD=1 && craco build",
     "test:dev": "craco test",
     "test": "jest --passWithNoTests",
     "eject": "craco eject",
@@ -20,7 +21,7 @@
     "@dfinity/candid": "0.9.3",
     "@dfinity/identity": "0.9.3",
     "@dfinity/principal": "0.9.3",
-    "@identity-labs/nfid-sdk-react": "0.0.1",
+    "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.0",
     "@tailwindcss/forms": "^0.5.0",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
@@ -45,7 +46,7 @@
   },
   "devDependencies": {
     "@craco/craco": "6.4.3",
-    "@identity-labs/nfid-ui-kit-core": "0.0.1",
+    "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.23",
     "@types/react": "^17.0.42",
