--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "borc": "3.0.0",
     "bowser": "^2.11.0",
     "clsx": "1.1.1",
+    "geckodriver": "^3.0.1",
     "immer": "9.0.12",
     "jotai": "1.6.1",
     "process": "0.11.10",
@@ -39,15 +40,15 @@
     "react-scripts": "5.0.0",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
-    "usergeek-ic-js": "github:usergeek/usergeek-ic-js",
+    "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
     "uuid": "8.3.2",
-    "geckodriver": "^3.0.1",
     "wdio-geckodriver-service": "^2.1.0"
   },
   "devDependencies": {
     "@craco/craco": "6.4.3",
     "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/chai": "^4.3.0",
     "@types/node": "17.0.23",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
@@ -56,9 +57,17 @@
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@wdio/allure-reporter": "^7.19.1",
+    "@wdio/cli": "^7.19.1",
+    "@wdio/cucumber-framework": "^7.19.1",
+    "@wdio/local-runner": "^7.19.1",
+    "@wdio/sauce-service": "^7.19.1",
+    "@wdio/spec-reporter": "^7.19.1",
     "assert": "2.0.0",
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
+    "chai": "^4.3.6",
+    "chromedriver": "^99.0.0",
     "dotenv": "16.0.0",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
@@ -70,20 +79,11 @@
     "postcss": "^8.4.12",
     "prettier": "2.6.0",
     "tailwindcss": "3.0.23",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "util": "0.12.4",
     "vite": "^2.8.6",
     "vite-tsconfig-paths": "3.4.1",
-    "@types/chai": "^4.3.0",
-    "@wdio/allure-reporter": "^7.19.1",
-    "@wdio/cli": "^7.19.1",
-    "@wdio/cucumber-framework": "^7.19.1",
-    "@wdio/local-runner": "^7.19.1",
-    "@wdio/sauce-service": "^7.19.1",
-    "@wdio/spec-reporter": "^7.19.1",
-    "chai": "^4.3.6",
-    "chromedriver": "^99.0.0",
-    "ts-node": "^10.7.0",
     "wdio-chromedriver-service": "^7.3.2"
   },
   "eslintConfig": {
