--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "immer": "9.0.12",
     "jotai": "1.6.1",
     "process": "0.11.10",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.28.1",
     "react-icons": "^4.3.1",
