--- a/.env.local.template
+++ b/.env.local.template
@@ -4,16 +4,16 @@ REACT_APP_FRONTEND_MODE=development
 REACT_APP_BACKEND_MODE=STAGING
 REACT_APP_II_MODE=development
 
-REACT_APP_MULTIPASS_DOMAIN=<YOUR_NGROK_PREFIX>.eu.ngrok.io
+REACT_APP_MULTIPASS_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
 REACT_APP_AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
 
-REACT_APP_II_CANISTER_ID_LOCAL=sp3hj-caaaa-aaaaa-aaajq-cai
-REACT_APP_IDENTITY_MANAGER_CANISTER_ID_LOCAL=zwmtd-uqaaa-aaaaa-aabwq-cai
-REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=z7py7-cyaaa-aaaaa-aabxa-cai
+INTERNET_IDENTITY_CANISTER_ID_LOCAL=
+IDENTITY_MANAGER_CANISTER_ID_LOCAL=
+PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=
 
-REACT_APP_II_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
-REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
-REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
+INTERNET_IDENTITY_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
+IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
+PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
 
 REACT_APP_IC_HOST=https://ic0.app
 REACT_APP_
