--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "liveshare.launcherClient": "visualStudioCode"
+  "liveshare.launcherClient": "visualStudioCode",
+  "cucumberautocomplete.steps": ["./test/features/step-definitions/*.ts"],
+  "cucumberautocomplete.syncfeatures": "./test/features/**/*.feature",
+  "cucumberautocomplete.strictGherkinCompletion": true
 }
