chore: bring tunnel script and task back

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,17 @@
         "panel": "new",
         "group": "develop"
       }
+    },
+    {
+      "label": "NFID NGROK tunnel",
+      "type": "shell",
+      "command": "./scripts/tunnel.sh",
+      "isBackground": true,
+      "presentation": {
+        "reveal": "always",
+        "panel": "new",
+        "group": "develop"
+      }
     }
   ]
 }
