feat: use env variable consistently

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,13 +35,12 @@ jobs:
           fi
 
         env:
-          REACT_APP_FRONTEND_MODE: production
-          REACT_APP_BACKEND_MODE: PRODUCTION
-          REACT_APP_II_MODE: production
+          FRONTEND_MODE: production
+          BACKEND_MODE: PRODUCTION
+          II_MODE: production
           DFX_NETWORK: ic
-          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.PROD_CANISTER_ID_NFID_FRONTEND}}.ic0.app
           IDENTITY_MANAGER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IDENTITY_MANAGER}}
           PUB_SUB_CHANNEL_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
           INTERNET_IDENTITY_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
-          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
-          REACT_APP_USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
+          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
