--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "@internet-identity-labs/multipass-frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "craco start",
-    "build": "craco build",
     "build:example": "export EXAMPLE_BUILD=1 && craco build",
+    "build": "craco build",
+    "dev": "craco start",
+    "eject": "craco eject",
+    "format:examples": "prettier --write ./examples/MultipassDemo/src",
+    "format": "prettier --write ./src",
+    "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
+    "generate:types": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t ts > frontend/generated/identity_manager.d.ts",
     "test:dev": "craco test",
     "test": "jest --passWithNoTests",
-    "eject": "craco eject",
-    "generate:types": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t ts > frontend/generated/identity_manager.d.ts",
-    "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
-    "format": "prettier --write ./src",
-    "format:examples": "prettier --write ./examples/MultipassDemo/src",
+    "tunnel": "./scripts/tunnel.sh",
     "wdio": "wdio run test/wdio.conf.ts"
   },
   "dependencies": {
