--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -21,13 +21,12 @@ jobs:
           dfx deploy --network dev  --no-wallet
 
         env:
-          REACT_APP_FRONTEND_MODE: production
-          REACT_APP_BACKEND_MODE: DEV
-          REACT_APP_II_MODE: production
+          FRONTEND_MODE: production
+          BACKEND_MODE: DEV
+          II_MODE: production
           DFX_NETWORK: dev
-          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.DEV_CANISTER_ID_NFID_FRONTEND}}.ic0.app
           IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
           PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
           INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
-          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
-          REACT_APP_USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
+          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
