--- a/.env.local.template
+++ b/.env.local.template
@@ -1,11 +1,11 @@
 PORT=9090
 
-REACT_APP_FRONTEND_MODE=development
-REACT_APP_BACKEND_MODE=STAGING
-REACT_APP_II_MODE=development
+FRONTEND_MODE=development
+BACKEND_MODE=STAGING
+II_MODE=development
 
-REACT_APP_MULTIPASS_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
-REACT_APP_AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
+TUNNEL_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
+AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
 
 INTERNET_IDENTITY_CANISTER_ID_LOCAL=
 IDENTITY_MANAGER_CANISTER_ID_LOCAL=
@@ -15,5 +15,5 @@ INTERNET_IDENTITY_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
 IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
 PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
 
-REACT_APP_IC_HOST=https://ic0.app
-REACT_APP_
+IC_HOST=https://ic0.app
+
