--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -26,11 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
+
     # Install your dependencies (with yarn "we could use npm")
     - run: yarn install
       name: Install dependencies
-        
+
      # Run your test with the same command you uses locally
-    - run: yarn wdio run wdio.conf.js
+    - run: npx wdio wdio.conf.ts
       name: Running E2E test
