--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -30,7 +30,7 @@ jobs:
         cache: 'npm'
 
     # Install your dependencies (with yarn "we could use npm")
-    - run: yarn install
+    - run: yarn install  --ignore-engines
       name: Install dependencies
 
      # Run your test with the same command you uses locally
