--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,6 +29,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
+    - run: mkdir -p /home/runner/.cache/yarn/v6
+      continue-on-error: true
+
     # Install your dependencies (with yarn "we could use npm")
     - run: yarn install  --ignore-engines
       name: Install dependencies
