--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - name: Setup chrome browser
+        uses: browser-actions/setup-chrome@latest
+        run: chrome --version
+
       - uses: actions/checkout@v3
 
       - uses: aviate-labs/setup-dfx@v0.2.3
@@ -23,9 +25,6 @@ jobs:
           dfx-version: 0.9.3
         env:
           DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
-
-      - run: mkdir -p /home/runner/.cache/yarn/v6
-        continue-on-error: true
 
       - name: Install dependencies
         run: yarn install --ignore-engines
