--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -31,7 +31,12 @@ jobs:
         run: yarn install --ignore-engines
 
       - name: Deploy to local replica
-        run: dfx deploy
+        run: |
+          dfx start --clean --background
+          dfx deploy
 
       - name: Running E2E test
         run: npx wdio wdio.conf.ts
+
+      - name: Shut down
+        run: dfx stop
