--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-viewport": "6.4.22",
     "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/node-logger": "^6.4.22",
@@ -91,7 +93,8 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "events": "3.3.0",
     "npm-run-all": "4.1.5",
-    "postcss": "^8.4.12",
+    "postcss": "8.4.12",
+    "postcss-loader": "6.2.1",
     "prettier": "2.6.2",
     "storybook": "6.4.22",
     "tailwindcss": "3.0.24",
