feat[sc-533]: sqash commit

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,7 @@
     "^./flows",
     "^frontend/(.*)$",
     "^components/(.*)$",
+    "^./assets/(.*)$",
     "^./hooks/(.*)$",
     "^[./]"
   ],
