--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -36,6 +36,17 @@ jobs:
           dfx start --clean --background
           dfx deploy
 
+        env:
+          FRONTEND_MODE: production
+          BACKEND_MODE: DEV
+          II_MODE: production
+          DFX_NETWORK: dev
+          IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
+          PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
+          INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
+          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+
       - name: Running E2E test
         run: npx wdio wdio.conf.ts
 
