--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "eject": "craco eject",
     "format:examples": "prettier --write ./examples/MultipassDemo/src",
     "format": "prettier --write ./src",
+    "generate-cucumber-html-report": "ts-node ./test/reporter/index.ts",
     "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
     "generate:types": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t ts > frontend/generated/identity_manager.d.ts",
     "test:dev": "craco test",
     "test": "jest --passWithNoTests",
     "tunnel": "./scripts/tunnel.sh",
-    "wdio": "wdio run test/wdio.conf.ts",
-    "generate-cucumber-html-report": "ts-node ./test/reporter/index.ts"
+    "wdio": "wdio run test/wdio.conf.ts"
   },
   "dependencies": {
     "@dfinity/agent": "0.9.3",
@@ -23,8 +23,9 @@
     "@dfinity/candid": "0.9.3",
     "@dfinity/identity": "0.9.3",
     "@dfinity/principal": "0.9.3",
-    "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.7",
+    "@internet-identity-labs/nfid-sdk-react": "^0.0.1-alpha.8",
     "@tailwindcss/forms": "^0.5.0",
+    "@types/qrcode": "^1.4.2",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
@@ -32,16 +33,19 @@
     "clsx": "1.1.1",
     "geckodriver": "^3.0.1",
     "immer": "9.0.12",
-    "jotai": "1.6.4",
+    "jotai": "1.6.1",
     "process": "0.11.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.28.1",
     "react-icons": "^4.3.1",
+    "react-parallax-tilt": "^1.6.7",
+    "react-reveal": "^1.2.2",
     "react-router": "6.2.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.0.5",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
@@ -61,10 +65,11 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@wdio/allure-reporter": "^7.19.1",
     "@wdio/cli": "^7.19.5",
     "@wdio/cucumber-framework": "^7.19.1",
-    "@wdio/local-runner": "^7.19.5",
+    "@wdio/local-runner": "^7.19.1",
     "@wdio/sauce-service": "^7.19.1",
     "@wdio/spec-reporter": "^7.19.5",
     "assert": "2.0.0",
@@ -83,9 +88,9 @@
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
-    "tailwindcss": "3.0.24",
+    "tailwindcss": "3.0.23",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.2",
     "util": "0.12.4",
     "wdio-chromedriver-service": "^7.3.2",
     "wdio-json-reporter": "^3.0.0"
