--- a/.env.local.template
+++ b/.env.local.template
@@ -10,10 +10,12 @@ AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/de
 INTERNET_IDENTITY_CANISTER_ID_LOCAL=
 IDENTITY_MANAGER_CANISTER_ID_LOCAL=
 PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=
+IM_ADDITION_CANISTER_ID_LOCAL=
 
 INTERNET_IDENTITY_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
 IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
 PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
+IM_ADDITION_CANISTER_ID_STAGING=5yjgb-gyaaa-aaaao-aabwa-cai
 
 IC_HOST=https://ic0.app
 USERGEEK_API_KEY=011101B3295E8F158C8318DE7F4E79E7
