chore: configure storybook and tailwind
(cherry picked from commit c5f55eebe0b7db10261c28494f156b82a2b3cdd0)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
       }
     },
     {
+      "label": "NFID Storybook",
+      "type": "shell",
+      "command": "yarn && yarn storybook",
+      "presentation": {
+        "reveal": "always",
+        "panel": "new",
+        "group": "develop"
+      }
+    },
+    {
       "label": "NFID NGROK tunnel",
       "type": "shell",
       "command": "./scripts/tunnel.sh",
