--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test:dev": "craco test",
     "test": "jest --passWithNoTests",
     "tunnel": "./scripts/tunnel.sh",
-    "wdio": "wdio run test/wdio.conf.ts"
+    "wdio": "wdio run test/wdio.conf.ts",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "@dfinity/agent": "0.9.3",
@@ -33,7 +35,7 @@
     "clsx": "1.1.1",
     "geckodriver": "^3.0.1",
     "immer": "9.0.12",
-    "jotai": "1.6.1",
+    "jotai": "1.6.4",
     "process": "0.11.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -54,8 +56,19 @@
     "wdio-geckodriver-service": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.16.7",
     "@craco/craco": "6.4.3",
     "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.3",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.11",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
     "@types/node": "17.0.23",
@@ -65,11 +78,10 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@wdio/allure-reporter": "^7.19.1",
     "@wdio/cli": "^7.19.5",
     "@wdio/cucumber-framework": "^7.19.1",
-    "@wdio/local-runner": "^7.19.1",
+    "@wdio/local-runner": "^7.19.5",
     "@wdio/sauce-service": "^7.19.1",
     "@wdio/spec-reporter": "^7.19.5",
     "assert": "2.0.0",
@@ -88,17 +100,29 @@
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
-    "tailwindcss": "3.0.23",
+    "storybook": "6.4.22",
+    "tailwindcss": "3.0.24",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "util": "0.12.4",
     "wdio-chromedriver-service": "^7.3.2",
-    "wdio-json-reporter": "^3.0.0"
+    "wdio-json-reporter": "^3.0.0",
+    "webpack": "^5.72.0"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
