feat[sc-1400]: profile page layout

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
       }
     },
     {
+      "label": "DFX",
+      "type": "shell",
+      "command": "dfx start",
+      "presentation": {
+        "reveal": "always",
+        "panel": "new",
+        "group": "develop"
+      }
+    },
+    {
       "label": "NFID Storybook",
       "type": "shell",
       "command": "yarn && yarn storybook",
