--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@dfinity/candid": "0.9.3",
     "@dfinity/identity": "0.9.3",
     "@dfinity/principal": "0.9.3",
+    "@headlessui/react": "1.5.0",
     "@internet-identity-labs/nfid-sdk-react": "^0.0.1-alpha.9",
     "@tailwindcss/forms": "^0.5.0",
     "@types/qrcode": "^1.4.2",
