--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,5 +42,6 @@ jobs:
           IDENTITY_MANAGER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IDENTITY_MANAGER}}
           PUB_SUB_CHANNEL_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
           INTERNET_IDENTITY_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
+          IM_ADDITION_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IM_ADDITION}}
           AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
