--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.16.7",
+    "@commitlint/cli": "16.2.4",
+    "@commitlint/config-conventional": "16.2.4",
     "@craco/craco": "6.4.3",
     "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.3",
     "@storybook/addon-actions": "^6.4.22",
@@ -98,6 +100,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.3.0",
     "events": "3.3.0",
+    "husky": "7.0.4",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
