chore(wdio): enable types in test folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       "expect-webdriverio"
     ]
   },
-  "include": ["src", "src/custom.d.ts"],
+  "include": ["src", "src/custom.d.ts", "test"],
   "exclude": ["node_modules"]
 }
