--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
-    "uuid": "8.3.2",
-    "wdio-cucumberjs-json-reporter": "^4.4.1",
-    "wdio-geckodriver-service": "^2.1.0"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.16.7",
@@ -74,19 +72,23 @@
     "@storybook/testing-library": "^0.0.11",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "17.0.29",
-    "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "6.1.5",
+    "@types/react": "^17.0.42",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "@wdio/allure-reporter": "^7.19.1",
     "@wdio/cli": "^7.19.5",
+    "@wdio/config": "^7.16.16",
     "@wdio/cucumber-framework": "^7.19.1",
     "@wdio/local-runner": "^7.19.5",
     "@wdio/sauce-service": "^7.19.1",
+    "@wdio/selenium-standalone-service": "^7.16.16",
     "@wdio/spec-reporter": "^7.19.5",
+    "@wdio/static-server-service": "^7.16.14",
     "assert": "2.0.0",
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
@@ -94,23 +96,31 @@
     "chromedriver": "^99.0.0",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
-    "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-wdio": "^7.4.2",
+    "eslint": "8.12.0",
     "events": "3.3.0",
     "husky": "7.0.4",
+    "jest-circus": "^27.5.1",
+    "jest": "^27.5.1",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "storybook": "6.4.22",
     "tailwindcss": "3.0.24",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "util": "0.12.4",
     "wdio-chromedriver-service": "^7.3.2",
+    "wdio-cucumberjs-json-reporter": "^4.4.1",
+    "wdio-geckodriver-service": "^2.1.0",
     "wdio-json-reporter": "^3.0.0",
+    "webdriverio": "^7.16.16",
     "webpack": "^5.72.0"
   },
   "eslintConfig": {
