--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -13,10 +13,13 @@ jobs:
         env:
           DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
 
-      - name: MULTIPASS FRONTEND | install & deploy
+      - name: MULTIPASS FRONTEND | install & tests
         run: |
           yarn
+          yarn test
 
+      - name: MULTIPASS FRONTEND | deploy
+        run: |
           dfx identity use action
           dfx deploy --network dev  --no-wallet
 
