--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "liveshare.launcherClient": "visualStudioCode",
-  "cucumberautocomplete.steps": ["./test/step-definitions/*.ts"],
+  "cucumberautocomplete.steps": [
+    "./test/step-definitions/*.ts",
+    "./test/support/steps/*.ts"
+  ],
   "cucumberautocomplete.syncfeatures": "./test/features/**/*.feature",
   "cucumberautocomplete.strictGherkinCompletion": true
 }
