--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "@types/chai": "^4.3.1",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.29",
+    "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "6.1.5",
-    "@types/react": "^17.0.42",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
@@ -94,20 +94,20 @@
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
     "chai": "^4.3.6",
-    "chromedriver": "^99.0.0",
+    "chromedriver": "101.0.0",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-wdio": "^7.4.2",
-    "eslint": "8.12.0",
     "events": "3.3.0",
     "husky": "7.0.4",
-    "jest-circus": "^27.5.1",
     "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
