chore([sc-1344]): setup debug mode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -60,7 +60,7 @@
     {
       "label": "NFID E2E TEST",
       "type": "shell",
-      "command": "yarn wdio",
+      "command": "yarn test:e2e",
       "isBackground": true,
       "presentation": {
         "reveal": "always",
