--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s public",
     "test:dev": "craco test",
+    "test:e2e": "wdio run wdio.conf.ts",
+    "test:e2e:debug": "cross-env DEBUG=true wdio run wdio.conf.ts --inspect",
     "test": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles",
-    "tunnel": "./scripts/tunnel.sh",
-    "wdio": "wdio run wdio.conf.ts"
+    "tunnel": "./scripts/tunnel.sh"
   },
   "dependencies": {
     "@dfinity/agent": "0.9.3",
