chore(ci): disable tests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: MULTIPASS FRONTEND | install & tests
         run: |
           yarn
-          yarn test
+          # yarn test
 
       - name: MULTIPASS FRONTEND | deploy
         run: |
