--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -15,6 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: install selenium webdrivers
+        run: |
+          yarn run selenium-standalone install --config ./selenium-standalone.config.js
+
+        run: |
+          sudo apt-get update
+          sudo apt-get --only-upgrade install google-chrome-stable
+          google-chrome --version
+
       - name: Setup chrome browser
         uses: browser-actions/setup-chrome@latest
 
