reverts .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+RUNNER=LOCAL
+LOG_LEVEL=debug
+TEST_URL=https://dq6kg-laaaa-aaaah-aaeaq-cai.raw.ic0.app
+
 IC=3y5ko-7qaaa-aaaal-aaaaq-cai
-DEV=dq6kg-laaaa-aaaah-aaeaq-cai
+DEV=rrkah-fqaaa-aaaaa-aaaaq-cai
