chore([sc-1465]): added react-scrollspy, highlights current nav item

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.18",
     "@tailwindcss/forms": "^0.5.0",
     "@types/qrcode": "^1.4.2",
+    "@types/react-scrollspy": "^3.3.5",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
@@ -50,6 +51,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.0.5",
+    "react-scrollspy": "^3.4.3",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
@@ -75,9 +77,9 @@
     "@types/chai": "^4.3.1",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.29",
+    "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "6.1.5",
-    "@types/react": "^17.0.42",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
@@ -97,17 +99,17 @@
     "chromedriver": "^99.0.0",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-wdio": "^7.4.2",
-    "eslint": "8.12.0",
     "events": "3.3.0",
     "husky": "7.0.4",
-    "jest-circus": "^27.5.1",
     "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
