chore([sc-1796]): configured prettier to sort react-sdk and formatted file

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,8 @@
   "useTabs": false,
   "importOrder": [
     "<THIRD_PARTY_MODULES>",
+    "^@internet-identity-labs/nfid-sdk-react",
+    "^frontend/design-system",
     "^./flows/(.*)$",
     "^./flows",
     "^frontend/(.*)$",
