hard-code agent url for all environments

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -27,6 +27,7 @@ jobs:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
           II_MODE: production
+          IC_HOST: https://ic0.app
           DFX_NETWORK: dev
           IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
           PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
