chore(sentry): add source maps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,3 +60,4 @@ jobs:
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
         with:
           environment: production
+          sourcemaps: ./build/static/js
