revert nvm changes

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -13,13 +13,9 @@ jobs:
         env:
           DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
 
-      - name: INSTALL NVM VERSION
-        shell: bash -l {0}
-        run: nvm install 17.9.0 && nvm use 17.9.0 && nvm alias default v17.9.0
-
       - name: MULTIPASS FRONTEND | install & tests
         run: |
-          yarn --ignore-engines
+          yarn
           # yarn test
 
       - name: MULTIPASS FRONTEND | deploy
