feat([sc-2551]): setup environment

--- a/.env.local.template
+++ b/.env.local.template
@@ -7,6 +7,7 @@ II_MODE=development
 TUNNEL_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
 AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
 AWS_SIGNIN_GOOGLE=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/signin/
+GOOGLE_CLIENT_ID=339872286671-87oou3adnvl7hst9gd90r9k7j6enl7vk.apps.googleusercontent.com
 
 INTERNET_IDENTITY_CANISTER_ID_LOCAL=
 IDENTITY_MANAGER_CANISTER_ID_LOCAL=
