fix([sc-2758]): using swr to prevent double loading

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,7 +1,7 @@
 PORT=9090
 
 FRONTEND_MODE=development
-BACKEND_MODE=STAGING
+BACKEND_MODE=DEV
 II_MODE=development
 
 TUNNEL_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
@@ -14,10 +14,10 @@ IDENTITY_MANAGER_CANISTER_ID_LOCAL=
 PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=
 IM_ADDITION_CANISTER_ID_LOCAL=
 
-INTERNET_IDENTITY_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
-IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
-PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
-IM_ADDITION_CANISTER_ID_STAGING=5yjgb-gyaaa-aaaao-aabwa-cai
+INTERNET_IDENTITY_CANISTER_ID_DEV=rdmx6-jaaaa-aaaaa-aaadq-cai
+IDENTITY_MANAGER_CANISTER_ID_DEV=74gpt-tiaaa-aaaak-aacaa-cai
+PUB_SUB_CHANNEL_CANISTER_ID_DEV=iyvpb-uqaaa-aaaag-qabxa-cai
+IM_ADDITION_CANISTER_ID_DEV=5yjgb-gyaaa-aaaao-aabwa-cai
 
 IC_HOST=https://ic0.app
 USERGEEK_API_KEY=011101B3295E8F158C8318DE7F4E79E7
