feat([sc-2932]): define unit test for getAccounts util

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "node",
       "webdriverio/async",
       "@wdio/cucumber-framework",
-      "expect-webdriverio"
+      "expect-webdriverio",
+      "jest"
     ]
   },
   "include": ["src", "src/types/custom.d.ts", "test"],
