test: setup react testing library for coordination layer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "jest"
     ]
   },
-  "include": ["src", "src/types/custom.d.ts", "test"],
+  "include": ["src", "src/types/custom.d.ts", "test", "mocks"],
   "exclude": ["node_modules"]
 }
