--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@internet-identity-labs/multipass-frontend",
+  "name": "@internet-identity-labs/nfid-frontend",
   "version": "0.0.0",
   "scripts": {
     "build-storybook": "build-storybook -s public",
@@ -34,6 +34,8 @@
     "@sentry/react": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "@tailwindcss/forms": "^0.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
     "@xstate/react": "^3.0.0",
@@ -46,6 +48,7 @@
     "geckodriver": "^3.0.1",
     "ictool": "^0.0.6",
     "immer": "9.0.12",
+    "jest-environment-jsdom": "^27.1.5",
     "jotai": "1.6.4",
     "process": "0.11.10",
     "react": "18.0.0",
@@ -89,7 +92,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
     "@types/google-one-tap": "^1.2.0",
-    "@types/jest": "28.1.4",
+    "@types/jest": "^27.1.5",
     "@types/node": "17.0.29",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
@@ -124,14 +127,15 @@
     "eslint-plugin-wdio": "^7.4.2",
     "events": "3.3.0",
     "husky": "7.0.4",
-    "jest": "^27.5.1",
-    "jest-circus": "^28.1.3",
+    "jest": "^27.1.5",
+    "jest-circus": "^27.1.5",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
+    "react-test-renderer": "^18.2.0",
     "storybook": "6.5.9",
     "tailwindcss": "3.0.24",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "util": "0.12.4",
