feat([sc-2932]): update usePersona hook - createPersona derivationOrigins

--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
       "last 2 edge version"
     ]
   },
+  "cracoConfig": "craco.config.ts",
   "repository": "git@github.com:internet-identity-labs/nfid-frontend.git",
   "license": "MIT"
 }
