Add yarn prettier to the workflows [sc-2971]

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Running Yarn prettier
+        run: yarn prettier --check "src/**/*.{ts,tsx}"
+
       - name: Setup chrome browser
         uses: browser-actions/setup-chrome@latest
 
