feat([sc-2932]): enabled sourcemap for dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "frontend/*": ["./src/*"]
     },
+    "sourceMap": true,
     "suppressExcessPropertyErrors": true,
     "types": [
       "node",
